# ghost-firmware-gateway

./: CMakeLists.txt  idf_component.yml  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/comm/: CMakeLists.txt  comm.c
components/comm/include/: comm.h
components/command_processor/: CMakeLists.txt
components/command_processor/include/: command_processor.h
components/command_processor/src/: command_processor.c
components/controller/: CMakeLists.txt  controller.c
components/controller/include/: controller.h
components/device_identity/: CMakeLists.txt
components/device_identity/include/: device_identity.h
components/device_identity/src/: device_identity.c
components/phoenix_client/: CMakeLists.txt
components/phoenix_client/include/: phoenix_client.h
components/phoenix_client/src/: phoenix_client.c
components/realtime_commands/: CMakeLists.txt
components/realtime_commands/include/: realtime_commands.h
components/realtime_commands/src/: realtime_commands.c
components/sntp_sync/: CMakeLists.txt
components/sntp_sync/include/: sntp_sync.h
components/sntp_sync/src/: sntp_sync.c
components/supabase_client/: CMakeLists.txt
components/supabase_client/include/: supabase_client.h
components/supabase_client/src/: supabase_client.c
components/ui/: CMakeLists.txt  idf_component.yml  ui.c
components/ui/include/: ui.h
components/wifi_manager/: CMakeLists.txt
components/wifi_manager/include/: wifi_manager.h
components/wifi_provisioner/: CMakeLists.txt
main/: CMakeLists.txt  main.c
main/includes/: system_globals.h
(+7 files in other folders)
